fixes #70 responsive width issues caused by text wrap

--- a/app/assets/stylesheets/components/home/_participate.scss
+++ b/app/assets/stylesheets/components/home/_participate.scss
@@ -44,6 +44,7 @@
 
   .text-p {
     font-weight: 600;
+    word-break: break-all;
 
     @media screen and (min-width: $screen-m) {
       font-size: 15px;
@@ -62,7 +63,7 @@
 
   .image-item {
     width: 100%;
-    height: 230px;
+    height: auto;
     margin-bottom: 20px;
 
     @media screen and (min-width: $screen-l) {
